@@ -1,3 +1,11 @@
+2006-01-05  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-view.c (gedit_view_class_init): added reset_searched_text
+	signal and keybinding
+	(reset_searched_text): new function
+
+	* gedit/gedit-view.h: added  reset_searched_text signal
+
 2006-01-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-document.c (compute_num_of_lines): make utf8-aware.
